--- a/flight-strip-live/package.json
+++ b/flight-strip-live/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@libsql/client": "^0.17.0",
+    "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.1",
+    "jsdom": "^27.4.0",
+    "marked": "^17.0.1",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^25.0.8",
     "@types/react": "^19",
     "@types/react-dom": "^19",
